--- a/src/html/register.html
+++ b/src/html/register.html
@@ -18,24 +18,28 @@
             </div>
             <div class="register-box">
                 <h4 class="title">国家/地区</h4>
+
                 <form action="">
                     <input type="text" placeholder="中国" class="region">
                     <div class="xia"><img src="/images/xia2.png" alt=""></div>
                 </form>
                 <h4 class="foot">成功注册帐号后，国家/地区将不能被修改</h4>
+
                 <!-- 手机号码注册 -->
                 <h4 class="title">手机号码</h4>
                 <div class="pre">
                     <div class="left"><span>+86</span><img src="/images/xia3.png" alt=""></div>
                     <label class="num">
-                        <input type="text" class="number" placeholder="请输入手机号码">
+                        <input type="text" class="number" id="username" placeholder="请输入手机号码">
                     </label>
                 </div>
+
                 <!-- 注册按钮 -->
                 <label class="out">
-                    <input type="submit" value="立即注册" class="registration">
+                    <input type="submit" id="submit" value="立即注册" class="registration">
                 </label>
             </div>
+
             <!-- 协议 -->
             <div class="agreement">
                 <img src="/images/gou.png" alt="">
@@ -46,6 +50,7 @@
             </div>
         </div>
     </div>
+
     <!-- 尾部 -->
     <div class="footer">
         <div class="list">
@@ -54,12 +59,15 @@
                 <li><a href="">繁体</a></li><span>|</span>
                 <li><a href="">English</a></li><span>|</span>
                 <li><a href="">常见问题</a></li><span>|</span>
-                <li><a href="">隐私政策</a></li><span>|</span>
+                <li><a href="">隐私政策</a></li>
             </ul>
         </div>
+
         <div class="list-bottom">
             <p>小米公司版权所有-京ICP备10046444-<img src="/images/police.png" alt="">京公网安备11010802020134号-京ICP证110507号</p>
         </div>
+
     </div>
+    <script src="/libs/requirejs/require.js" data-main="/js/register.js"></script>
 </body>
 </html>
